# framework.appfw.vconf-internal-keys

./: CMakeLists.txt  Makefile  README  create_cmd.xsl  create_get_cmd.xsl  project.config  test_report.xsl
data/: vconf-internal-bt-keys.xml  vconf-internal-ciss-keys.xml  vconf-internal-dnet-keys.xml  vconf-internal-email-keys.xml  vconf-internal-filemanager-keys.xml  vconf-internal-hotfix.xml  vconf-internal-idle-lock-keys.xml  vconf-internal-isf-keys.xml  vconf-internal-livebox-keys.xml  vconf-internal-location-keys.xml  vconf-internal-lockscreen-keys.xml  vconf-internal-moved-from.xml  vconf-internal-msg-keys.xml  vconf-internal-nfc-keys.xml  vconf-internal-pm-keys.xml  vconf-internal-setting-keys.xml  vconf-internal-sound-keys.xml  vconf-internal-sysman-keys.xml  vconf-internal-system-keys.xml  vconf-internal-telephony-keys.xml  vconf-internal-uncategorized-keys.xml  vconf-internal-wifi-keys.xml
debian/: changelog
include-wearable/: vconf-internal-alarm-keys.h  vconf-internal-allshare-keys.h  vconf-internal-bt-keys.h  vconf-internal-call-keys.h  vconf-internal-ciss-keys.h  vconf-internal-cloud-pdm-keys.h  vconf-internal-cluster-home-keys.h  vconf-internal-crash-keys.h  vconf-internal-csc-keys.h  vconf-internal-dailybriefing-keys.h  vconf-internal-desktop-mode-keys.h  vconf-internal-dnet-keys.h  vconf-internal-dock-keys.h  vconf-internal-download-keys.h  vconf-internal-dr-keys.h  vconf-internal-eas-keys.h  vconf-internal-facebook-keys.h  vconf-internal-factory-keys.h  vconf-internal-fmm-keys.h  vconf-internal-fota-consumer.h  vconf-internal-gallery-setting-keys.h  (+30 more)
(+169 files in other folders)
