CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(vconf-internal-keys C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR "\${exec_prefix}/lib")
SET(INCLUDEDIR "\${prefix}/include/vconf")
SET(VERSION_MAJOR 0)
SET(VERSION "${VERSION_MAJOR}.0.1")

IF(DEVICE_PROFILE STREQUAL "wearable")
	SET(PROFILE_INCLUDE "include-wearable")
ELSE()
	SET(PROFILE_INCLUDE "include-mobile")
ENDIF()


ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")
ADD_DEFINITIONS("-DFACTORYFS=\"$ENV{FACTORYFS}\"")
ADD_DEFINITIONS("-DDATAFS=\"$ENV{DATADIR}\"")

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${PROJECT_NAME}.pc @ONLY)
SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${PROJECT_NAME}.pc")

INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}.pc DESTINATION lib/pkgconfig)
FILE(GLOB header-files "${CMAKE_SOURCE_DIR}/${PROFILE_INCLUDE}/*.h")
INSTALL(FILES ${header-files} DESTINATION ${INCLUDEDIR})
